# my-custom-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
hooks/: check_files.py
