[metadata]
name = my_custom_hooks
description = All my custom hooks
version = 0.1.0
author = Ruben Caballero
author_email = rcaballero@tusdatos.co
license = MIT
url = https://www.tusdatos.co/

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-files = hooks.check_files:main